tests/fail/08_undefined_function.kr
# Test: Calling undefined function
# Expected: Error: Undefined function 'doesNotExist'

call doesNotExist with "hello"

